--- a/k8s/manifests/deployment.yml
+++ b/k8s/manifests/deployment.yml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tasksmanager-app
+  name: joshua-tasksmanager-app
   labels:
-    app: tasksmanager-app
+    app: joshua-tasksmanager-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: tasksmanager-app
+      app: joshua-tasksmanager-app
   template:
     metadata:
       labels:
-        app: tasksmanager-app
+        app: joshua-tasksmanager-app
     spec:
       containers:
-        - name: tasksmanager-app
-          image: devsahamerlin/tasksmanager:latest
+        - name: joshua-tasksmanager-app
+          image: joshuamoochooram/tasksmanager:latest
           ports:
             - containerPort: 8082
