--- a/k8s/manifests/service.yml
+++ b/k8s/manifests/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tasksmanager-app-service
+  name: joshua-tasksmanager-app-service
 spec:
   type: NodePort
   ports:
     - name: http
       port: 8082
-      targetPort: 8082
+      targetPort: 8089
       protocol: TCP
   selector:
-    app: tasksmanager-app
+    app: joshua-tasksmanager-app
