--- a/k8s/manifests/service.yml
+++ b/k8s/manifests/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: joshua-tasksmanager-app-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - name: http
       port: 8082
